2003-05-09  Andreas Kupries  <andreask@activestate.com>

	* ncgi.tcl (import_file): Brace [expr].

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-05-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: Fixed all the tests which use a sub-process. The
	  auto_path was not propagated, causing the sub-process to require
	  an installed tcllib for correct operation (i.e. to find the
	  other packages ncgi depends on, like fileutil). also changed the
	  test prolog to match the other testsuites.

2003-04-25  Andreas Kupries  <andreask@activestate.com>

	* ncgi.tcl (::ncgi::query): Added code to handle binary data in
	  query/upload correctly.

2003-04-23  Andreas Kupries  <andreask@activestate.com>

	* ncgi.man:
	* ncgi.tcl: Added command [importFile] from tcllib patch
	  611595. The command [tempfile] was relocated into fileutil
	  instead.

2003-04-10  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl:
	* ncgi.man:
	* ncgi.tcl: Fixed bug #614591. Set version of the package to to
	  1.2.2. Also fixed equivalnet of bug #648679.

2003-02-05  David N. Welton  <davidw@dedasys.com>

	* ncgi.tcl: Use string match instead of regexp.

2002-08-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl: Updated 'info exist' to 'info exists'.

2002-08-15  David N. Welton  <davidw@dedasys.com>

	* ncgi.tcl (ncgi::setValueList): Fix [ 593254 ] ncgi::SetValue bug
	- SetValue now works correctly with multipart values with spaces
	in them.

2002-08-09  David N. Welton  <davidw@dedasys.com>

	* ncgi.test: Added two new tests for setValue.

	* ncgi.tcl (ncgi::multipart): Fix [ 564279 ] ncgi::multipart bug -
	commented out offending 'puts' statements.

2002-04-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.man: Added doctools manpage.

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
